--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
  <body>
    <table cellspacing="20">
      <tr >
-       <td><img src="munshid.png" alt="Munshid"></td>
+       <td><img style="width:150px;height:150px;" src="munshid.png" alt="Munshid"></td>
        <td><h1>Mohammed Munshid</h1>
-       <p><em>Network enginner of <strong><a href="https://www.google.com/">Google </a></strong>,Web Developer at <strong>AJsolutions</strong></em></p>
+       <p><em>Network enginner at <strong><a href="https://www.google.com/">Google </a></strong>,Web Developer at <strong>AJsolutions</strong></em></p>
        <p>I'm an network enginner and web developer. I 🖤 Black Coffe</p></td>
      </tr>
    </table>
