--- a/contact.html
+++ b/contact.html
@@ -15,9 +15,9 @@
  <form class="" action="mailto:munshidshan6@gmail.com" method="post" enctype="text/plain">
   <label for="">Name</label>
   <input type="text" name="Name" value=""><br>
-  <label for="">Your Mail ID</label>
+  <label for="">Your Mail ID</label><br>
   <input type="email" name="email" value=""><br>
-  <label for="">Your Message</label>
+  <label for="">Your Message</label><br>
   <textarea name="Message" rows="8" cols="80"></textarea><br>
   <input type="submit" name="" value="">
 </form>
