--- a/contact.html
+++ b/contact.html
@@ -13,13 +13,13 @@
    <li><a href="#">Skype</a></li>
  </ul>
  <form class="" action="mailto:munshidshan6@gmail.com" method="post" enctype="text/plain">
-  <label for="">Name</label>
+  <label for="">Name</label><br>
   <input type="text" name="Name" value=""><br>
   <label for="">Your Mail ID</label><br>
   <input type="email" name="email" value=""><br>
   <label for="">Your Message</label><br>
   <textarea name="Message" rows="8" cols="80"></textarea><br>
-  <input type="submit" name="" value="">
+  <input type="submit" name="Send" value="">
 </form>
  </body>
 </html>
