--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
   <input type="email" name="email" value=""><br>
   <label for="">Your Message</label><br>
   <textarea name="Message" rows="8" cols="80"></textarea><br>
-  <input type="submit" name="Send" value="">
+  <input type="submit" name="Send" value="Send">
 </form>
  </body>
 </html>
