--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
  <head>
    <meta charset="UTF-8">
-   <title>title</title>
+   <title>contact</title>
  </head>
  <body>
  <h2>conatact</h2>
